overflow problem fixed closes #4

--- a/eagle/eagle/static/css/style.css
+++ b/eagle/eagle/static/css/style.css
@@ -79,6 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
+  overflow-wrap: break-word;
   margin-bottom: 1rem; }
 
 abbr[title],
